@@ -14,8 +14,6 @@ public class NDIUConfig {
 	public static final Core CORE;
 	public static final Thresholds THRESHOLDS;
 	public static final Exclusions EXCLUSIONS;
-	public static final Misc MISC;
-
 	public static final ForgeConfigSpec SPEC;
 
 	static {
@@ -23,7 +21,6 @@ public class NDIUConfig {
 		CORE = new Core(BUILDER);
 		THRESHOLDS = new Thresholds(BUILDER);
 		EXCLUSIONS = new Exclusions(BUILDER);
-		MISC = new Misc(BUILDER);
 		SPEC = BUILDER.build();
 	}
 
@@ -75,7 +72,7 @@ public class NDIUConfig {
 
 		public Exclusions(ForgeConfigSpec.Builder builder) {
 			List<String> AtkExcEnt = Arrays.asList("minecraft:slime", "minecraft:magma_cube", "tconstruct:earth_slime", "tconstruct:sky_slime", "tconstruct:ender_slime", "tconstruct:terracube", "twilightforest:maze_slime");
-			List<String> DmgRecExcEnt = Arrays.asList(new String[0]);
+			List<String> DmgRecExcEnt = List.of();
 			List<String> DmgSrcWhtLst = Arrays.asList("inFire", "lava", "sweetBerryBush", "cactus", "lightningBolt", "inWall", "hotFloor", "outOfWorld");
 			builder.comment("Exclusion lists for certain features").push("exclusions");
 
@@ -98,21 +95,6 @@ public class NDIUConfig {
 		}
 	}
 
-	public static class Misc {
-		public final ForgeConfigSpec.BooleanValue debugModeTemp;
-
-		public boolean debugMode;
-
-		public Misc(ForgeConfigSpec.Builder builder) {
-			builder.comment("Miscellaneous stuff").push("misc");
-
-			debugModeTemp = builder.comment(
-							"If true, turns on feature which sends a message when a player receives damage, containing information such as the name of the source and the quantity. Use this to find the name of the source you need to whitelist, or the id of the mob you want to exclude.")
-					.define("debugMode", false);
-			builder.pop();
-		}
-	}
-
 	public static void cacheValues() {
 		CORE.iFrameInterval = CORE.iFrameIntervalTemp.get();
 		CORE.excludePlayers = CORE.excludePlayersTemp.get();
@@ -124,9 +106,6 @@ public class NDIUConfig {
 		EXCLUSIONS.attackExcludedEntities = new HashSet<>(EXCLUSIONS.attackExcludedEntitiesTemp.get());
 		EXCLUSIONS.dmgReceiveExcludedEntities = new HashSet<>(EXCLUSIONS.dmgReceiveExcludedEntitiesTemp.get());
 		EXCLUSIONS.damageSrcWhitelist = new HashSet<>(EXCLUSIONS.damageSrcWhitelistTemp.get());
-
-		MISC.debugMode = MISC.debugModeTemp.get();
-
 	}
 
 	@SubscribeEvent
